crates/parser/src/tests/snapshots/kcl_parser__tests__error_recovery__select_recovery_11.snap
---
source: crates/parser/src/tests/error_recovery.rs
expression: "$crate :: tests :: parsing_expr_string(r#\"a?.b?.c?\"#)"
---
Node {
    node: Selector(
        SelectorExpr {
            value: Node {
                node: Selector(
                    SelectorExpr {
                        value: Node {
                            node: Identifier(
                                Identifier {
                                    names: [
                                        Node {
                                            node: "a",
                                            filename: "",
                                            line: 1,
                                            column: 0,
                                            end_line: 1,
                                            end_column: 1,
                                        },
                                    ],
                                    pkgpath: "",
                                    ctx: Load,
                                },
                            ),
                            filename: "",
                            line: 1,
                            column: 0,
                            end_line: 1,
                            end_column: 1,
                        },
                        attr: Node {
                            node: Identifier {
                                names: [
                                    Node {
                                        node: "b",
                                        filename: "",
                                        line: 1,
                                        column: 3,
                                        end_line: 1,
                                        end_column: 4,
                                    },
                                ],
                                pkgpath: "",
                                ctx: Load,
                            },
                            filename: "",
                            line: 1,
                            column: 3,
                            end_line: 1,
                            end_column: 4,
                        },
                        ctx: Load,
                        has_question: true,
                    },
                ),
                filename: "",
                line: 1,
                column: 0,
                end_line: 1,
                end_column: 4,
            },
            attr: Node {
                node: Identifier {
                    names: [
                        Node {
                            node: "c",
                            filename: "",
                            line: 1,
                            column: 6,
                            end_line: 1,
                            end_column: 7,
                        },
                    ],
                    pkgpath: "",
                    ctx: Load,
                },
                filename: "",
                line: 1,
                column: 6,
                end_line: 1,
                end_column: 7,
            },
            ctx: Load,
            has_question: true,
        },
    ),
    filename: "",
    line: 1,
    column: 0,
    end_line: 1,
    end_column: 7,
}
