crates/parser/src/tests/snapshots/kcl_parser__tests__error_recovery__select_recovery_4.snap
---
source: crates/parser/src/tests/error_recovery.rs
expression: "$crate :: tests :: parsing_expr_string(r#\"''.lower\"#)"
---
Node {
    node: Selector(
        SelectorExpr {
            value: Node {
                node: StringLit(
                    StringLit {
                        is_long_string: false,
                        raw_value: "''",
                        value: "",
                    },
                ),
                filename: "",
                line: 1,
                column: 0,
                end_line: 1,
                end_column: 2,
            },
            attr: Node {
                node: Identifier {
                    names: [
                        Node {
                            node: "lower",
                            filename: "",
                            line: 1,
                            column: 3,
                            end_line: 1,
                            end_column: 8,
                        },
                    ],
                    pkgpath: "",
                    ctx: Load,
                },
                filename: "",
                line: 1,
                column: 3,
                end_line: 1,
                end_column: 8,
            },
            ctx: Load,
            has_question: false,
        },
    ),
    filename: "",
    line: 1,
    column: 0,
    end_line: 1,
    end_column: 8,
}
